[package]
name = "frost"
version = "0.1.0"
edition = "2021"

[lib]
name = "frost"
path = "src/lib.rs"

[[bin]]
name = "frostinfo"
path = "src/bin/frostinfo.rs"

[[bin]]
name = "frostcat"
path = "src/bin/frostcat.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }