[package]
name = "frost-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = "0.3"
frost = {path = "../frost"}
lazy_static = "1.4.0"
serde = "1.0.2"
serde_derive = "1.0.2"
serde-xml-rs = "0.5.1"
walkdir = "2.3.2"