[package]
name = "frost-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { workspace = true }
frost = {path = "../frost"}
lazy_static = "1.4.0"
serde = { workspace = true }
serde_derive = { workspace = true }
serde-xml-rs = "0.6.0"
walkdir = "2.3.2"