[package]
name = "frost_codegen"
version = "0.2.1"
edition = "2021"
rust-version = "1.65"

[dependencies]
chumsky = "0.8.0"
bpaf = { workspace = true }
frost = {path = "../frost"}
lazy_static = "1.4.0"
serde = { workspace = true, features = ["derive"]}
serde-big-array = "0.5.1"
serde-xml-rs = "0.6.0"
walkdir = "2.3.2"

[lib]
name = "frost_codegen"
path = "src/lib.rs"

[[bin]]
name = "frost_codegen"
path = "src/bin.rs"
