[package]
name = "frost"
version = "0.2.2"
edition = "2021"

[lib]
name = "frost"
path = "src/lib.rs"

[[bin]]
name = "frost"
path = "src/bin/frost.rs"

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
bpaf = { workspace = true }
chrono = "0.4.22"
itertools = "0.10.3"
lz4_flex = "0.9.5"
serde = { workspace = true }
serde_rosmsg = { workspace = true }

[features]
color = ["bpaf/bright-color"]
autocomplete = ["bpaf/autocomplete"]