[package]
name = "frost"
version = "0.2.11"
edition = "2021"
rust-version = "1.65"
build = "build.rs"

[lib]
name = "frost"
path = "src/lib.rs"

[[bin]]
name = "frost"
path = "src/bin/frost.rs"

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
chrono = "0.4.22"
clap = "4.1.4"
itertools = "0.10.3"
lz4_flex = "0.10.0"
serde = { workspace = true, features = ["derive"]}
serde_rosmsg = { workspace = true }

